<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_person"
            android:icon="@mipmap/ic_account_circle_black_24dp"
            android:title="@string/activity_main_drawer_item1" />
        <item
            android:id="@+id/nav_friend"
            app:actionLayout="@layout/badge"
            android:icon="@mipmap/ic_supervisor_account_black_24dp"
            android:title="@string/activity_main_drawer_item2" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@mipmap/ic_favorite_border_black_24dp"
            android:title="@string/activity_main_drawer_item3" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/activity_main_drawer_item4" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@mipmap/ic_rate_review_black_24dp"
            android:title="@string/activity_main_drawer_item5" />
        <item
            android:id="@+id/nav_help"
            android:icon="@mipmap/ic_info_outline_black_24dp"
            android:title="@string/activity_main_drawer_item6" />
    </group>

    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/ic_screen_share_black_24dp"
                android:title="@string/activity_main_drawer_item7" />
            <item
                android:id="@+id/nav_about"
                android:icon="@mipmap/ic_view_quilt_black_24dp"
                android:title="@string/activity_main_drawer_item8" />
        </menu>
    </item>

</menu>
